--- a/components/header.html
+++ b/components/header.html
@@ -13,6 +13,7 @@
     <script defer src="js/cart.js"></script>
     <script defer src="js/catalog.js"></script>
 </head>
+<body>
     <header class="header">
         <div class="container">
             <div class="logo">
@@ -54,7 +55,7 @@
                 <li><a href="index.html" class="nav-link active">Inicio</a></li>
                 <li><a href="quienes-somos.html" class="nav-link">Quiénes somos</a></li>
                 <li><a href="catalog.html" class="nav-link">Catálogo</a></li>
-                <li><a href="#" class="nav-link">Ofertas</a></li>
+                <li><a href="catalog.html?filter=offer" class="nav-link">Ofertas</a></li>
                 <li><a href="#" class="nav-link">Canjeá tus puntos</a></li>
             </ul>
         </div>
